--- a/frontend/ProyectoTFG/src/app/components/signup/signup.component.html
+++ b/frontend/ProyectoTFG/src/app/components/signup/signup.component.html
@@ -1,24 +1,69 @@
-
-<div class="container mt-4">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <h2>Registro</h2>
-        <form (ngSubmit)="onSubmit()" #registrationForm="ngForm">
-          <div class="form-group">
-            <label for="username">Nombre de usuario:</label>
-            <input type="text" class="form-control" id="username" name="username" [(ngModel)]="user.username" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Correo electrónico:</label>
-            <input type="email" class="form-control" id="email" name="email" [(ngModel)]="user.email" required>
-          </div>
-          <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" class="form-control" id="password" name="password" [(ngModel)]="user.password" required>
-          </div>
-          <button type="submit" class="btn btn-primary" [disabled]="!registrationForm.valid">Registrar</button>
-        </form>
+<form class="form-horizontal" (ngSubmit)="onSubmit(registrationForm.value)" #registrationForm="ngForm">
+  <fieldset>
+    <legend>{{tituloForm}}</legend>
+    <div class="form-group">
+      <label for="username">Nombre de usuario:</label>
+      <input type="text" class="form-control" id="username" name="username" [(ngModel)]="usuario.userName" required
+        #userName="ngModel">
+      <div [hidden]="userName.valid || userName.pristine" class="alert alert-danger">
+        El nombre de usuario es obligatorio.
       </div>
     </div>
-  </div>
-  
+    <div class="form-group">
+      <label for="email">Correo electrónico:</label>
+      <input type="email" class="form-control" id="email" name="email" [(ngModel)]="usuario.email" required
+        #email="ngModel">
+      <div [hidden]="email.valid || email.pristine" class="alert alert-danger">
+        El correo electrónico es obligatorio.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">Contraseña:</label>
+      <input type="password" class="form-control" id="password" name="password" [(ngModel)]="usuario.password" required
+        #password="ngModel">
+      <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
+        La contraseña es obligatoria.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="nombre">Nombre:</label>
+      <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="usuario.nombre" required
+        #nombre="ngModel">
+      <div [hidden]="nombre.valid || nombre.pristine" class="alert alert-danger">
+        El nombre es obligatorio.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="apellidos">Apellidos:</label>
+      <input type="text" class="form-control" id="apellidos" name="apellidos" [(ngModel)]="usuario.apellidos" required
+        #apellidos="ngModel">
+      <div [hidden]="apellidos.valid || apellidos.pristine" class="alert alert-danger">
+        Los apellidos son obligatorios.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="nif">NIF:</label>
+      <input type="text" class="form-control" id="nif" name="nif" [(ngModel)]="usuario.nif" required #nif="ngModel">
+      <div [hidden]="nif.valid || nif.pristine" class="alert alert-danger">
+        El NIF es obligatorio.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="telefono">Teléfono:</label>
+      <input type="text" class="form-control" id="telefono" name="telefono" [(ngModel)]="usuario.telefono" required
+        #telefono="ngModel">
+      <div [hidden]="telefono.valid || telefono.pristine" class="alert alert-danger">
+        El teléfono es obligatorio.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="direccion">Dirección:</label>
+      <input type="text" class="form-control" id="direccion" name="direccion" [(ngModel)]="usuario.direccion" required
+        #direccion="ngModel">
+      <div [hidden]="direccion.valid || direccion.pristine" class="alert alert-danger">
+        La dirección es obligatoria.
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!registrationForm.valid">Registrar</button>
+  </fieldset>
+</form>
