23 de abril, tfg. toco pulir partes del inicio de sesion y el rol a escoger. area personal optima. navbar a cambiar

--- a/frontend/ProyectoTFG/src/app/components/navbar/navbar.component.html
+++ b/frontend/ProyectoTFG/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<div class="navbar">
+    <!-- Otros elementos del navbar -->
+    <button (click)="irAHomeDelUsuario()">Ir a Home del Usuario</button>
+    <button routerLink="/consumidores" routerLinkActive="active">Lista de consumidores</button>
+  </div>
+  
