--- a/frontend/ProyectoTFG/src/app/components/login/login.component.html
+++ b/frontend/ProyectoTFG/src/app/components/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row justify-content-center mt-5">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h1 class="card-title text-center">Inicio de sesión</h1>
+            <form>
+              <div class="form-group mb-3">
+                <label for="user">Usuario</label>
+                <input type="user" class="form-control" id="user" name="user" placeholder="Introduce tu usuario" [(ngModel)]="user">
+              </div>
+              <div class="form-group mb-3">
+                <label for="password">Contraseña</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Introduce tu contraseña" [(ngModel)]="password">
+              </div>
+              <div class="form-group mb-3">
+                <label for="tipoSesion">Tipo de sesión</label>
+                <select class="form-control" id="tipoSesion" name="tipoSesion" [(ngModel)]="tipoSesion">
+                  <option value="1">Iniciar sesión como Consumidor</option>
+                  <option value="2">Iniciar sesión como Ofertante</option>
+                </select>
+              </div>
+              <button type="button" class="btn btn-primary btn-block" (click)="iniciarSesion()">Iniciar Sesión</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
