actividades y filtrado front

--- a/frontend/ProyectoTFG/src/app/components/navbar/navbar.component.html
+++ b/frontend/ProyectoTFG/src/app/components/navbar/navbar.component.html
@@ -11,9 +11,11 @@
         <li>
           <span class="nav-link px-2 text-white" (click)="irAConsumidores()">Consumidores</span>
         </li>
+        <li>
+          <span class="nav-link px-2 text-white" (click)="irAActividades()">Actividades</span>
+        </li>
         <li><a href="#" class="nav-link px-2 text-white">Crear Actividad</a></li>
         <li><a href="#" class="nav-link px-2 text-white">Notificaciones</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">About</a></li>
       </ul>
 
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
