--- a/frontend/ProyectoTFG/src/app/components/actividades/actividades.component.html
+++ b/frontend/ProyectoTFG/src/app/components/actividades/actividades.component.html
@@ -3,12 +3,21 @@
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <h2 class="text-center mb-4">Actividades Disponibles</h2>
-            <div class="select-container"> 
+            <div class="select-container">
                 <select class="form-select" (change)="filtrarPorTipo($event)">
                     <option value="">Todos los tipos</option>
-                    <option *ngFor="let tipo of tiposActividades" [value]="tipo.nombre">{{ tipo.nombre }}</option>
+                    @for (tipo of tiposActividades; track $index) {
+                    <option [value]="tipo.nombre">{{ tipo.nombre }}</option>
+                    }
                 </select>
             </div>
+
+            @if (actividades.length === 0) {
+            <div class="alert alert-warning mt-4" role="alert">
+                No hay actividades disponibles para el tipo seleccionado.
+            </div>
+            }
+            @else {
             @for (item of actividades; track $index) {
             <div class="card mb-3">
                 <div class="card-header">
@@ -23,12 +32,19 @@
                     <p class="card-text">Materiales: {{ item.materiales }}</p>
                     }
                     <div class="text-center">
-                        <button type="button" class="btn btn-primary" >Apúntate</button>
-                        <!--(click)="irASolicitudActividad(idConsumidor, item.id)"-->
+                        @if (idConsumidor !== null) {
+                        <button type="button" class="btn btn-primary"
+                            (click)="irASolicitudActividad(idConsumidor, item.id)">Apúntate</button>
+                        } @else {
+                        <div class="alert alert-danger" role="alert">
+                            Por favor, inicia sesión para apuntarte a una actividad.
+                        </div>
+                        }
                     </div>
                 </div>
             </div>
             }
+            }
+
         </div>
     </div>
-</div>
