--- a/frontend/ProyectoTFG/src/app/components/navbar/navbar.component.html
+++ b/frontend/ProyectoTFG/src/app/components/navbar/navbar.component.html
@@ -9,10 +9,12 @@
         <li>
           <span class="nav-link px-2 text-white" (click)="irAActividades()">Actividades</span>
         </li>
-        <li><a href="#" class="nav-link px-2 text-white">Crear Actividad</a></li>
+        <li *ngIf="rolUsuario === 'PROVIDER'">
+          <span class="nav-link px-2 text-white" (click)="irACrearActividad()">Crear Actividad</span>
+        </li>
         <li><a href="#" class="nav-link px-2 text-white">Notificaciones</a></li>
       </ul>
-      
+
 
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
         <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
