--- a/frontend/ProyectoTFG/src/app/components/lista-actividades-ofertante/lista-actividades-ofertante.component.html
+++ b/frontend/ProyectoTFG/src/app/components/lista-actividades-ofertante/lista-actividades-ofertante.component.html
@@ -13,15 +13,25 @@
                         <p class="mb-1"><strong>Fecha de inicio:</strong> {{ actividad.fec_inicio | date }}</p>
                         <p class="mb-1"><strong>Fecha final:</strong> {{ actividad.fec_final | date }}</p>
                         <p class="mb-1"><strong>Precio:</strong> {{ actividad.precio | currency:'EUR' }}</p>
-                        <p *ngIf="actividad.materiales" class="mb-1"><strong>Materiales:</strong> {{ actividad.materiales }}</p>
-                        <p class="mb-0"><strong>Tipo de Actividad:</strong> {{ actividad.tipoActividad.nombre }}</p>
+                        <p *ngIf="actividad.materiales" class="mb-1"><strong>Materiales:</strong> {{
+                            actividad.materiales }}</p>
+                        <p class="mb-0"><strong>Tipo de Actividad:</strong> {{ actividad.tipoActividad.nombre }}</p><br>
+
+                        <!-- Botón para ir a corregir actividad -->
+                        <button class="btn btn-primary"
+                            (click)="irAcorregirActividad(ofertante.id, actividad.id)">Corregir Actividad</button>
+
+                        <!-- Botón para eliminar actividad -->
+                        <button class="btn btn-danger ms-2" (click)="eliminarActividad(ofertante.id, actividad.id)">Eliminar
+                            Actividad</button>
 
                         <div *ngIf="review$ && review$.length > 0" class="mt-3">
                             <h6>Reseñas:</h6>
                             <ul class="list-unstyled">
                                 <ng-container *ngFor="let review of review$">
                                     <li *ngIf="review.actividad.id === actividad.id">
-                                        <p><strong>Autor:</strong> {{review.consumidor.nombre}} {{review.consumidor.apellidos}}</p>
+                                        <p><strong>Autor:</strong> {{review.consumidor.nombre}}
+                                            {{review.consumidor.apellidos}}</p>
                                         <p><strong>Comentario:</strong> {{ review.comentario }}</p>
                                         <p><strong>Calificación:</strong> {{ review.puntos }} / 5</p>
                                     </li>
